--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@ h1, h2, h3, h4, h5, h6{
 	font-family: Arial, Helvetica, sans-serif;
 	color:#58b4f5;
 }
+
+h1{
+	font-size: 3.5rem;
+}
+
+h2{
+	font-size: 2.25rem;
+	font-weight: normal;
+}
+
+h3{
+	text-transform: uppercase;
+}
