--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body{
+	border-color: #c9c9c9;
+	border-style: solid;
+	border-width: 15px;
+	box-sizing: border-box;
 	color: #333333;
 	font-family: Times New Roman, Times, serif;
+	margin: 0 auto;
+	padding: 2rem 3rem;
+	width: 60%;
+	
+	
 }
 
 h1, h2, h3, h4, h5, h6{
